--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -1,22 +1,27 @@
 .home-container {
-	display: grid;
-	grid-template-rows: 2fr 2fr 1fr;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	height: 100%;
 }
 
 .quick-search-container {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	margin-bottom: 100px;
+	margin-bottom: 60px;
 }
 
 .circles-container {
 	display: flex;
-	justify-content: center;
-	gap: 50px;
+	justify-content: space-around;
+	width: 80%;
 	position: relative;
 }
 
+#meal-container {
+	width: 50%;
+}
 .circle-category-container {
 	height: 120px;
 	width: 120px;
@@ -55,5 +60,11 @@ img {
 form {
 	display: flex;
 	flex-direction: column;
+	align-items: center;
+	gap: 20px;
+}
+
+input {
+	height: 50px;
 }
 /* https://minibackground.com/wp-content/uploads/2019/01/Melfi-marble.jpg */
