revised div shaping for Recipes, created layout for Search.js

--- a/src/components/Search/Search.css
+++ b/src/components/Search/Search.css
@@ -1,3 +1,10 @@
 .link-container > a {
-	color: blue;
+	color: black;
+}
+
+.link-container {
+	display: flex;
+	flex-wrap: wrap;
+	width: 75%;
+	gap: 25px;
 }
