layout control and styling for Home and Search

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,12 @@
 	box-sizing: border-box;
 }
 
+main {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	height: 100%;
+}
 #root {
 	display: grid;
 	grid-template-columns: 1fr;
