--- a/src/components/Recipe/Recipe.css
+++ b/src/components/Recipe/Recipe.css
@@ -19,10 +19,14 @@
 	padding: 0px 15px;
 	background-color: rgb(0, 0, 0);
 	color: white;
-	font-size: 12px;
+	font-size: 16px;
 	text-align: center;
 	display: flex;
 	align-items: center;
 	justify-content: center;
 	border-radius: 0 10px 10px 0;
+}
+
+input {
+	font-size: 18px;
 }
