--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -1,7 +1,7 @@
 .home-container {
 	display: flex;
 	flex-direction: column;
-	justify-content: center;
+	justify-content: space-evenly;
 	height: 100%;
 }
 
@@ -10,18 +10,18 @@
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
-	margin-bottom: 60px;
+	gap: 20px;
 }
 
 .circles-container {
 	display: flex;
 	justify-content: center;
-	gap: 3%;
+	gap: 4%;
 	width: 80%;
 	position: relative;
 }
 
-.search-container {
+.home-search-form {
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
@@ -62,6 +62,11 @@
 .hover-container:hover {
 	opacity: 1;
 }
+
+.search-blurb {
+	font-size: 24px;
+	margin: 0;
+}
 img {
 	height: 100%;
 	width: 100%;
@@ -87,4 +92,4 @@ button {
 	width: 100px;
 	border: none;
 }
-/* https://minibackground.com/wp-content/uploads/2019/01/Melfi-marble.jpg */
+/* Marble background source: https://minibackground.com/wp-content/uploads/2019/01/Melfi-marble.jpg */
