--- a/src/components/RecipeDetails/RecipeDetails.css
+++ b/src/components/RecipeDetails/RecipeDetails.css
@@ -11,6 +11,7 @@
 		rgba(255, 255, 255, 1) 85%,
 		rgba(255, 255, 255, 0) 100%
 	); */
+	position: relative;
 }
 .name-details-container {
 	padding-left: 40px;
@@ -89,4 +90,68 @@ ol li::before {
 	content: counter(recipe-counter) "  ";
 	font-size: 30px;
 	font-weight: 700;
+}
+
+#add-myrecipes {
+	position: absolute;
+	top: 20px;
+	left: 85%;
+	width: 200px;
+}
+
+/* rating modal  */
+#modal {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0, 0, 0, 0.65);
+	z-index: 4;
+}
+.modal-form-container {
+	position: absolute;
+	background-color: white;
+	width: 20%;
+	height: 45%;
+	left: 50%;
+	top: 50%;
+	transform: translate(-50%, -50%);
+	border-radius: 10px;
+}
+
+.rating-container {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	gap: 10px;
+	padding: 20px 0;
+}
+
+#rating-form-name {
+	margin: 0;
+	font-size: 24px;
+}
+
+.rating-label-container {
+	display: flex;
+	flex-direction: column;
+	gap: 10px;
+	width: 80%;
+	margin-bottom: 10px;
+}
+
+.taste-category {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	position: relative;
+}
+
+.taste-category > .rating-input {
+	width: 60px;
+	height: 30px;
+	border-radius: 0;
+}
+
+#rating-save-button {
+	width: 200px;
 }
