--- a/src/components/RecipeDetails/RecipeDetails.css
+++ b/src/components/RecipeDetails/RecipeDetails.css
@@ -99,59 +99,19 @@ ol li::before {
 	width: 200px;
 }
 
-/* rating modal  */
-#modal {
+#close-modal {
+	z-index: 10;
 	position: absolute;
-	width: 100%;
-	height: 100%;
-	background-color: rgba(0, 0, 0, 0.65);
-	z-index: 4;
-}
-.modal-form-container {
-	position: absolute;
-	background-color: white;
-	width: 20%;
-	height: 45%;
-	left: 50%;
-	top: 50%;
-	transform: translate(-50%, -50%);
-	border-radius: 10px;
-}
-
-.rating-container {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	gap: 10px;
-	padding: 20px 0;
-}
-
-#rating-form-name {
-	margin: 0;
-	font-size: 24px;
-}
-
-.rating-label-container {
-	display: flex;
-	flex-direction: column;
-	gap: 10px;
-	width: 80%;
-	margin-bottom: 10px;
-}
-
-.taste-category {
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-	position: relative;
-}
-
-.taste-category > .rating-input {
-	width: 60px;
-	height: 30px;
+	top: 28%;
+	left: 58%;
 	border-radius: 0;
+	width: 25px;
+	height: 20px;
+	background-color: rgba(0, 0, 0, 0);
+	color: black;
+	font-size: 18px;
 }
 
-#rating-save-button {
-	width: 200px;
+#close-modal:hover {
+	cursor: pointer;
 }
