--- a/src/components/MyRecipes/MyRecipes.css
+++ b/src/components/MyRecipes/MyRecipes.css
@@ -1,3 +1,14 @@
 .myrecipes-container {
-	display: grid;
+	display: flex;
+	height: 100%;
+	width: 100%;
+}
+
+.savedrecipes-container {
+	width: 70%;
+}
+
+.graph-container {
+	width: 30%;
+	background-color: black;
 }
