--- a/src/components/RatingModal/RatingModal.css
+++ b/src/components/RatingModal/RatingModal.css
@@ -10,6 +10,7 @@
 	background-color: white;
 	width: 20%;
 	height: 45%;
+	max-height: 400px;
 	left: 50%;
 	top: 50%;
 	transform: translate(-50%, -50%);
