changed Home layout and data for more search results

--- a/src/components/RecipeDetails/RecipeDetails.css
+++ b/src/components/RecipeDetails/RecipeDetails.css
@@ -4,13 +4,13 @@
 	grid-template-rows: 0.2fr 0.75fr 0.05fr;
 	height: 100%;
 	width: 100%;
-	/* background: linear-gradient(
+	background: linear-gradient(
 		90deg,
 		rgba(255, 255, 255, 0) 0%,
-		rgba(255, 255, 255, 1) 25%,
-		rgba(255, 255, 255, 1) 85%,
+		rgba(255, 255, 255, 1) 30%,
+		rgba(255, 255, 255, 1) 70%,
 		rgba(255, 255, 255, 0) 100%
-	); */
+	);
 	position: relative;
 }
 .name-details-container {
