--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -92,4 +92,8 @@ button {
 	width: 100px;
 	border: none;
 }
+
+button:hover {
+	background-color: rgb(133, 0, 0);
+}
 /* Marble background source: https://minibackground.com/wp-content/uploads/2019/01/Melfi-marble.jpg */
