--- a/src/components/Recipe/Recipe.css
+++ b/src/components/Recipe/Recipe.css
@@ -3,8 +3,12 @@
 	width: 300px;
 	display: flex;
 	flex-direction: flex-start;
+	transition: 0.2s ease-in-out;
 }
 
+.recipe-container:hover {
+	transform: scale(1.05);
+}
 .recipe-container > img {
 	height: 150px;
 	width: 150px;
