added useState for new variable graphData for graphComponent

--- a/src/components/MyRecipes/MyRecipes.css
+++ b/src/components/MyRecipes/MyRecipes.css
@@ -9,7 +9,9 @@
 }
 
 .graph-container {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
 	width: 30%;
-	background-color: black;
-	color: white;
+	background-color: white;
 }
