--- a/src/components/MyRecipes/MyRecipes.css
+++ b/src/components/MyRecipes/MyRecipes.css
@@ -34,3 +34,27 @@
 	top: 2%;
 	left: 85%;
 }
+
+#help-button:hover {
+	cursor: pointer;
+}
+
+#myrecipes-help {
+	width: 80%;
+	text-align: center;
+	max-height: 750px;
+	line-height: 1.5;
+	height: 70%;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-evenly;
+	align-items: center;
+}
+
+#myrecipes-help > p {
+	padding: 0 20px;
+}
+
+#myrecipes-help > h3 {
+	margin: 0;
+}
