--- a/src/components/Recipe/Recipe.css
+++ b/src/components/Recipe/Recipe.css
@@ -43,22 +43,6 @@ input {
 	border-radius: 0;
 }
 
-#myrecipes-help {
-	width: 80%;
-	text-align: center;
-	max-height: 750px;
-	line-height: 1.5;
-	height: 70%;
-	display: flex;
-	flex-direction: column;
-	justify-content: space-evenly;
-	align-items: center;
-}
-
-#myrecipes-help > p {
-	padding: 0 20px;
-}
-
-#myrecipes-help > h3 {
-	margin: 0;
+#set-recipe:hover {
+	cursor: pointer;
 }
