--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -10,33 +10,26 @@
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
-	gap: 20px;
+	gap: 1.5rem;
+	margin: 1rem 0;
 }
 
 .circles-container {
 	display: flex;
 	justify-content: center;
-	gap: 4%;
+	gap: 1.5rem;
 	width: 80%;
 	position: relative;
 }
 
-.home-search-form {
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
-	gap: 20px;
-}
-
 .search-bar {
 	display: flex;
-	gap: 20px;
+	gap: 1.5rem;
 	align-items: center;
 }
 .circle-category-container {
-	height: 120px;
-	width: 120px;
+	height: 7.5rem;
+	width: 7.5rem;
 	border-radius: 50%;
 	overflow: hidden;
 	position: relative;
@@ -88,7 +81,7 @@ button {
 	color: white;
 	background-color: rgb(255, 0, 0);
 	height: 40px;
-	border-radius: 20px;
+	border-radius: 1.5rem;
 	width: 100px;
 	border: none;
 }
@@ -104,4 +97,39 @@ button:hover {
 .animate__animated.animate__backInLeft,
 .animate__animated.animate__backInRight {
 	--animate-duration: 2s;
+}
+
+/* Media queries */
+
+@media screen and (max-width: 1200px) {
+	.search-blurb {
+		font-size: 20px;
+	}
+	.circles-container {
+		gap: 1rem;
+	}
+	.circle-category-container {
+		height: 6rem;
+		width: 6rem;
+	}
+	.hover-container {
+		font-size: 14px;
+	}
+
+
+}
+
+@media screen and (min-width: 992px) {
+
+}
+
+@media screen and (min-width: 768px) {
+
+}
+
+@media screen and (min-width: 600px) {
+
+}
+@media screen and (max-width: 600px) {
+
 }
