add mobile layout to search and recipe

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -62,21 +62,35 @@ a {
 	.logo-bar {
 		padding: 1.1rem 0;
 	}
+	.second-bar {
+		gap: 3rem;
+	}
+	.second-bar > div > a {
+		font-size: .9rem;
+	}
 }
 
 @media screen and (max-width: 480px) {
 	#logo {
 		font-size: 2rem;
-		letter-spacing: .6rem;
+		letter-spacing: .5rem;
 	}
 
 	#blurb {
-		letter-spacing: .15rem;
+		letter-spacing: .1rem;
 		bottom: .2rem;
 		font-size: .7rem;
 	}
 
 	.logo-bar {
-		padding: 1.25rem 0;
+		padding: 1.35rem 0;
+	}
+
+	.second-bar {
+		gap: 2rem;
+		padding: .7rem 0 .8rem 2.25rem;
+	}
+	.second-bar > div > a {
+		font-size: .8rem;
 	}
 }
