--- a/src/components/Recipe/Recipe.css
+++ b/src/components/Recipe/Recipe.css
@@ -1,6 +1,6 @@
 .recipe-container {
-	height: 150px;
-	width: 300px;
+	height: 8rem;
+	width: 16rem;
 	display: flex;
 	flex-direction: flex-start;
 	transition: 0.2s ease-in-out;
@@ -10,17 +10,17 @@
 	transform: scale(1.05);
 }
 .recipe-container > img {
-	height: 150px;
-	width: 150px;
+	height: 8rem;
+	width: 8rem;
 	border-radius: 10px 0 0 10px;
 }
 
 .name-container {
 	position: relative;
-	left: 150px;
-	height: 150px;
-	width: 150px;
-	padding: 0px 15px;
+	left: 8rem;
+	height: 8rem;
+	width: 8rem;
+	padding: 0 1rem;
 	background-color: rgb(0, 0, 0);
 	color: white;
 	font-size: 16px;
@@ -45,4 +45,74 @@ input {
 
 #set-recipe:hover {
 	cursor: pointer;
+}
+
+
+@media screen and (max-width: 768px) {
+	.name-container {
+		left: 6rem;
+		height: 6rem;
+		width: 6rem;
+		padding: 0 .75rem;
+	}
+	.recipe-container>img {
+		height: 6rem;
+		width: 6rem;
+		border-radius: 10px 0 0 10px;
+	}
+	.recipe-container{
+		height: 6rem;
+		width: 12rem;
+	}
+	.name-container {
+		font-size: .7rem;
+	}
+}
+
+@media screen and (max-width: 600px) {
+	.name-container {
+		left: 5rem;
+		height: 5rem;
+		width: 5rem;
+		padding: 0 .5rem;
+	}
+
+	.recipe-container>img {
+		height: 5rem;
+		width: 5rem;
+		border-radius: 10px 0 0 10px;
+	}
+
+	.recipe-container {
+		height: 5rem;
+		width: 10rem;
+	}
+
+	.name-container {
+		font-size: .6rem;
+	}
+}
+
+@media screen and (max-width: 480px) {
+	.name-container {
+		left: 4rem;
+		height: 4rem;
+		width: 4rem;
+		padding: 0 .5rem;
+	}
+
+	.recipe-container>img {
+		height: 4rem;
+		width: 4rem;
+		border-radius: 10px 0 0 10px;
+	}
+
+	.recipe-container {
+		height: 4rem;
+		width: 8rem;
+	}
+
+	.name-container {
+		font-size: .6rem;
+	}
 }
